@@ -15,7 +15,7 @@ See the file COPYING for license information.
 
 Requirements:
 
-VDR & DVB. BMW & Ph.D.. BEER. YARRR!
+VDR and a DVB card.
 
 Description:
 
